// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comphub - Salary Bar Trend Component should display minus sign when percentage change is negative 1`] = `
<pf-salary-trend-chart
  absoluteValueOfPercentageChange={[Function Number]}
  isHourly="false"
  localSalaryTrendData={[Function Object]}
  salaryTrendData={[Function Object]}
>
  <div
    data-qa-id="cht-salary-trend"
  >
    <div
      class="percentage-change"
      data-qa-id="cnt-percentageChange"
    >
      
      <span
        class="text-danger"
      >
         - 
      </span>
       1.77% 
    </div>
    <kendo-chart>
      <kendo-chart-legend
        orientation="horizontal"
        position="bottom"
      />
      <kendo-chart-value-axis>
        <kendo-chart-value-axis-item />
      </kendo-chart-value-axis>
      <kendo-chart-category-axis>
        <kendo-chart-category-axis-item />
      </kendo-chart-category-axis>
      <kendo-chart-series>
        <kendo-chart-series-item
          categoryfield="EffectiveDate"
          type="area"
        />
      </kendo-chart-series>
      <kendo-chart-tooltip>
        
      </kendo-chart-tooltip>
    </kendo-chart>
  </div>
</pf-salary-trend-chart>
`;

exports[`Comphub - Salary Bar Trend Component should display plus sign when percentage change is positive 1`] = `
<pf-salary-trend-chart
  absoluteValueOfPercentageChange={[Function Number]}
  isHourly="false"
  localSalaryTrendData={[Function Object]}
  salaryTrendData={[Function Object]}
>
  <div
    data-qa-id="cht-salary-trend"
  >
    <div
      class="percentage-change"
      data-qa-id="cnt-percentageChange"
    >
      
      <span
        class="plus-sign"
      >
         + 
      </span>
       1.80% 
    </div>
    <kendo-chart>
      <kendo-chart-legend
        orientation="horizontal"
        position="bottom"
      />
      <kendo-chart-value-axis>
        <kendo-chart-value-axis-item />
      </kendo-chart-value-axis>
      <kendo-chart-category-axis>
        <kendo-chart-category-axis-item />
      </kendo-chart-category-axis>
      <kendo-chart-series>
        <kendo-chart-series-item
          categoryfield="EffectiveDate"
          type="area"
        />
      </kendo-chart-series>
      <kendo-chart-tooltip>
        
      </kendo-chart-tooltip>
    </kendo-chart>
  </div>
</pf-salary-trend-chart>
`;

exports[`Comphub - Salary Bar Trend Component should not display plus or minus sign when percentage change is 0 1`] = `
<pf-salary-trend-chart
  absoluteValueOfPercentageChange="0"
  isHourly="false"
  localSalaryTrendData={[Function Object]}
  salaryTrendData={[Function Object]}
>
  <div
    data-qa-id="cht-salary-trend"
  >
    <div
      class="percentage-change"
      data-qa-id="cnt-percentageChange"
    >
      
       0.00% 
    </div>
    <kendo-chart>
      <kendo-chart-legend
        orientation="horizontal"
        position="bottom"
      />
      <kendo-chart-value-axis>
        <kendo-chart-value-axis-item />
      </kendo-chart-value-axis>
      <kendo-chart-category-axis>
        <kendo-chart-category-axis-item />
      </kendo-chart-category-axis>
      <kendo-chart-series>
        <kendo-chart-series-item
          categoryfield="EffectiveDate"
          type="area"
        />
      </kendo-chart-series>
      <kendo-chart-tooltip>
        
      </kendo-chart-tooltip>
    </kendo-chart>
  </div>
</pf-salary-trend-chart>
`;
